openshift/overlays/staging/jhipster-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    com.xebialabs.service: jhipster-console
  name: jhipster-console
spec:
  host: jhipster-console.openshift-training.io
