openshift/overlays/staging/jhipster-registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    com.xebialabs.service: jhipster-registry
  name: jhipster-registry
spec:
  host: jhipster-registry-stage.openshift-training.io
